@@ -8,6 +8,8 @@ Changes - Apache::Test change logfile
 
 =item 1.07-dev
 
+Fix Apache::TestConfigParse to handle quoted Include arguments [Stas]
+
 Fix Apache::TestServer::wait_till_is_up not to bail out if the server
 takes time to start and LWP is not available. [Stas]
 
